hphp/test/zend/good/Zend/tests/try_finally_007.php.expectf

Fatal error: Goto to a label outside a finally block is not supported in %s/try_finally_007.php on line 2
